--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "tensorboard>=2.10.0",
-    "wandb>=0.13.11",
-    "gym==0.23.1",
-    "gymnasium[mujoco]==0.29.1",
-    "moviepy>=1.0.3",
-    "pygame>=2.1",
-    "huggingface-hub>=0.11.1",
-    "rich<12.0",
-    "tenacity>=8.2.2",
-    "tyro>=0.5.10",
-    "imageio>=2.14.1,<3",
-    "torch>=2.7.1",
+ "brax>=0.13.0",
+ "distrax>=0.1.7",
+ "flax>=0.12.0",
+ "gymnax>=0.0.9",
+ "jax>=0.7.2",
+ "navix>=0.7.4",
+ "numpy>=2.3.3",
+ "optax>=0.2.6",
 ]
