--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,14 +21,13 @@ brax = [
  "optax>=0.2.6",
 ]
 atari = [
- "jax==0.4.8",
- "jaxlib==0.4.7",
- "numpy==1.24.4",
- "optax==0.1.4",
- "envpool",
+ "jax==0.4.20",
+ "jaxlib==0.4.20",
+ "numpy==1.26.4",
+ "optax==0.1.8",
+ "envpool==0.8.4",
  "scipy<1.13.0",
- "flax",
- "tensorboard>=2.20.0",
+ "flax==0.6.11",
  "gym==0.23.1",
 ]
 
