--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,16 @@ atari = [
  "flax==0.6.11",
  "gym==0.23.1",
 ]
+minatar = [
+    "brax>=0.12.5",
+    "distrax>=0.1.5",
+    "flax>=0.6.11",
+    "gymnax>=0.0.9",
+    "jax>=0.4.20",
+    "navix>=0.7.4",
+    "numpy>=1.26.4",
+    "optax>=0.1.8",
+]
 
 [tool.uv]
 conflicts = [
