--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+ "msgpack>=1.1.2",
+ "numpy>=1.26.4",
  "tyro>=0.9.33",
 ]
 
